[gd_scene load_steps=16 format=3 uid="uid://br77314sdfrha"]

[ext_resource type="Texture2D" uid="uid://bi8a3yd6086xq" path="res://Assets/Art/bricks.png" id="1_n2r65"]
[ext_resource type="Script" path="res://scripts/results.gd" id="1_n7pd1"]
[ext_resource type="Texture2D" uid="uid://d1jiw8dvfctvp" path="res://Assets/Art/UI/cross_normal.png" id="2_wn5c0"]
[ext_resource type="Texture2D" uid="uid://nrnaspqtjbw0" path="res://Assets/Art/UI/cross_pressed.png" id="3_n45d0"]
[ext_resource type="FontFile" uid="uid://b67ys68h8t2y7" path="res://Assets/Art/UI/BASKVILL.ttf" id="3_ummi7"]
[ext_resource type="Texture2D" uid="uid://bfh0gjhtqaixb" path="res://Assets/Art/UI/cross_hover.png" id="4_riyvl"]
[ext_resource type="Texture2D" uid="uid://cumumvjqtw6o4" path="res://Assets/Art/floor.png" id="6_yy5h0"]
[ext_resource type="Texture2D" uid="uid://dw1yahhrg2oip" path="res://Assets/Art/spriteSheet.png" id="7_h1047"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jrv8n"]
atlas = ExtResource("7_h1047")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn6d3"]
atlas = ExtResource("7_h1047")
region = Rect2(48, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx1g8"]
atlas = ExtResource("7_h1047")
region = Rect2(64, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jogxg"]
atlas = ExtResource("7_h1047")
region = Rect2(80, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp1vp"]
atlas = ExtResource("7_h1047")
region = Rect2(96, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnk7k"]
atlas = ExtResource("7_h1047")
region = Rect2(112, 96, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6rn0g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrv8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn6d3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx1g8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jogxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp1vp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnk7k")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[node name="results" type="Node2D"]
script = ExtResource("1_n7pd1")

[node name="bg" type="Node2D" parent="."]
scale = Vector2(2, 2)

[node name="Sprite2D13" type="TextureRect" parent="bg"]
offset_left = -28.0
offset_top = -32.0
offset_right = 243.0
offset_bottom = 127.0
scale = Vector2(2, 2)
texture = ExtResource("1_n2r65")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="bg"]
offset_left = -26.5
offset_top = -32.0
offset_right = 512.5
offset_bottom = 282.0
color = Color(0, 0, 0, 0.662745)

[node name="Name" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 377.0
offset_top = 20.0
offset_right = 600.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("3_ummi7")
theme_override_font_sizes/normal_font_size = 64
text = "Results"

[node name="menu" type="TextureButton" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(5, 5)
texture_normal = ExtResource("2_wn5c0")
texture_pressed = ExtResource("3_n45d0")
texture_hover = ExtResource("4_riyvl")

[node name="died" type="Node2D" parent="."]
visible = false
position = Vector2(480, 280)

[node name="TextureRect" type="TextureRect" parent="died"]
offset_left = -480.0
offset_top = 60.0
offset_bottom = 76.0
scale = Vector2(2, 2)
texture = ExtResource("6_yy5h0")
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="died"]
offset_left = -480.0
offset_top = -80.0
offset_bottom = -64.0
scale = Vector2(2, 2)
texture = ExtResource("6_yy5h0")
stretch_mode = 1

[node name="text" type="RichTextLabel" parent="died"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -20.0
offset_right = 150.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("3_ummi7")
theme_override_font_sizes/normal_font_size = 64
text = "You Died"

[node name="victory" type="Node2D" parent="."]
position = Vector2(480, 440)

[node name="TextureRect" type="TextureRect" parent="victory"]
offset_left = -480.0
offset_top = 60.0
offset_bottom = 76.0
scale = Vector2(2, 2)
texture = ExtResource("6_yy5h0")
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="victory"]
offset_left = -480.0
offset_top = -80.0
offset_bottom = -64.0
scale = Vector2(2, 2)
texture = ExtResource("6_yy5h0")
stretch_mode = 1

[node name="text" type="RichTextLabel" parent="victory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.0
offset_top = -20.0
offset_right = 275.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("3_ummi7")
theme_override_font_sizes/normal_font_size = 64
text = "Pong has been slain!"

[node name="text2" type="RichTextLabel" parent="victory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.0
offset_top = -340.0
offset_right = 330.0
offset_bottom = -280.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("3_ummi7")
theme_override_font_sizes/normal_font_size = 48
text = "Minions Slain:
"

[node name="text3" type="RichTextLabel" parent="victory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.0
offset_top = -290.0
offset_right = 330.0
offset_bottom = -230.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("3_ummi7")
theme_override_font_sizes/normal_font_size = 48
text = "Bullets Used:"

[node name="text4" type="RichTextLabel" parent="victory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.0
offset_top = -240.0
offset_right = 330.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("3_ummi7")
theme_override_font_sizes/normal_font_size = 48
text = "Swords Activated:"

[node name="text5" type="RichTextLabel" parent="victory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.0
offset_top = -190.0
offset_right = 330.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("3_ummi7")
theme_override_font_sizes/normal_font_size = 48
text = "Shield Activated:"

[node name="minionNum" type="RichTextLabel" parent="victory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = -340.0
offset_right = 330.0
offset_bottom = -280.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("3_ummi7")
theme_override_font_sizes/normal_font_size = 48
text = "0
"

[node name="bulletNum" type="RichTextLabel" parent="victory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = -290.0
offset_right = 330.0
offset_bottom = -230.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("3_ummi7")
theme_override_font_sizes/normal_font_size = 48
text = "0"

[node name="swordNum" type="RichTextLabel" parent="victory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = -240.0
offset_right = 330.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("3_ummi7")
theme_override_font_sizes/normal_font_size = 48
text = "0"

[node name="shieldNum" type="RichTextLabel" parent="victory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = -190.0
offset_right = 330.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("3_ummi7")
theme_override_font_sizes/normal_font_size = 48
text = "0"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="victory"]
position = Vector2(-432, -120)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_6rn0g")
autoplay = "default"
frame_progress = 0.612656

[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
